# meridian

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MODEL_CARD.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
benchmarks/: BENCHMARKS.md  corpus.md
benchmarks/results/: README.md  faithfulness.json  retrieval_ablation.json  stage0_variance.json  verifier_progression.json
benchmarks/splits/: README.md  checksums.json  sample_dev.json
demo/: index.html
docs/: license-review.md  scale-runs.md
docs/adr/: 0001-scope.md  0002-chunking.md  0003-tokenizer-corpus-mix.md  0004-training-curriculum.md  0005-default-index.md  0006-answer-format.md  0007-abstention-operating-point.md  README.md
docs/design/: README.md  error-attribution.md  failure-taxonomy.md  phase-00.md  phase-01.md  phase-02.md  phase-03.md  phase-04.md  phase-05.md  phase-06.md  phase-07.md  phase-08.md  phase-09.md  phase-10.md  phase-11.md  phase-12.md
examples/: sample_pubmed.xml
scripts/: README.md  ablate_stage0.py  benchmark_ann.py  benchmark_calibration.py  benchmark_faithfulness.py  benchmark_latency.py  build_pubmedqa.py  build_splits.py  campaign_pubmedqa.py  download_scale_data.py  embed_corpus.py  evaluate.py  ingest.py  plot_summary.py  serve.py  train_pubmedqa_classifier.py  train_pubmedqa_dense.py  train_reranker.py  train_retriever.py  train_tokenizer.py  train_verifier.py  variance_dense.py
src/meridian/: __init__.py  cli.py  device.py
src/meridian/abstain/: __init__.py  answerability.py  calibration.py  gate.py
src/meridian/answer/: __init__.py  extractive.py
src/meridian/corpus/: __init__.py  dedup.py  download.py  ingest.py  mesh.py  parser.py  records.py  stats.py  store.py
src/meridian/data/: __init__.py  scale.py
src/meridian/encoder/: __init__.py  artifact.py  data.py  embed.py  mining.py  pretrain.py  training.py
src/meridian/eval/: __init__.py  attribution.py  harness.py  metrics.py  misses.py  pubmedqa.py  qrels.py  (+1 more)
tests/: test_cli.py  test_device.py  test_package.py
tests/abstain/: test_abstain.py
tests/answer/: test_extractive.py
tests/corpus/: test_dedup.py  test_download.py  test_ingest.py  test_mesh.py  test_parser.py  test_records.py  test_stats.py  test_store.py
tests/data/: test_scale.py
tests/encoder/: test_artifact.py  test_data.py  test_embed.py  test_mining.py  test_pretrain.py  test_training.py
tests/eval/: test_attribution.py  test_harness.py  test_metrics.py  test_misses.py  test_pubmedqa.py  test_qrels.py  test_splits.py
tests/generation/: test_generation.py
tests/reranker/: test_reranker.py
tests/retrieval/: test_analyzer.py  test_bm25.py  test_dense.py  test_embedding_index.py  test_factory.py  test_hybrid.py  test_pipeline.py  test_rerank.py
tests/serving/: test_app.py
tests/tokenization/: test_artifact.py  test_fertility.py  test_special_tokens.py  test_training.py
tests/verify/: test_policy.py  test_verify.py
(+41 files in other folders)
