[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meridian-rag"
version = "0.0.1"
description = "A from-scratch grounded RAG engine over biomedical literature: every ML component trained in-house, every answer cited, verified, or refused."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "K Satya Sai Nischal" }]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "nlp",
    "information-retrieval",
    "biomedical",
    "pubmed",
    "question-answering",
    "from-scratch",
    "pytorch",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

# Encoders come from Polaris, generation from Zenith — both pinned exactly
# (house rule: framework extensions land upstream and are consumed as releases).
# Everything else in this repo is built on PyTorch/NumPy primitives.
dependencies = [
    "polaris-nlp==1.1.0",
    "zenith-nlp==1.0.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
# Experiment tracking for the eval/training harnesses (RAG.md §5). Optional and
# lazily imported, so the offline test suite never requires it.
tracking = ["mlflow>=2.5"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.0",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/cattolatte/meridian"
Repository = "https://github.com/cattolatte/meridian"
Changelog = "https://github.com/cattolatte/meridian/blob/main/CHANGELOG.md"
Issues = "https://github.com/cattolatte/meridian/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
meridian = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py312", "py313"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "scripts"]

# Upstream frameworks / optional extras that ship no type stubs — don't fail on them.
[[tool.mypy.overrides]]
module = ["polaris.*", "zenith.*", "mlflow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=meridian --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
branch = true
source = ["meridian"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "\\.\\.\\.",  # Protocol / stub method bodies
]
